@@ -9,7 +9,7 @@ wrong6 (int n)
     {
       work (n, 0);
 /* incorrect nesting of barrier region in a single region */
-#pragma omp barrier	/* { dg-warning "may not be closely nested" } */
+#pragma omp barrier	/* { dg-error "may not be closely nested" } */
       work (n, 1);
     }
   }
